styles/prosilver/theme/common.css
/* ... */
a.download-button, a.colorizeit-button {
	box-sizing: border-box;
	color: #FFFFFF;
	display: inline-block;
	float: left;
	height: 36px;
	font-weight: bold;
	text-decoration: none;
}

a.download-button {
	background-color: #8fbc2e;
	border-radius: 2px;
	padding: 5px;
	width: 100%;
}

.has-colorizeit a.download-button {
	border-radius: 2px 0 0 2px;
	border-right: 1px solid #bbde6f;
	width: 155px;
}

a.colorizeit-button {
	background-color: #5483a8;
	border-radius: 0 2px 2px 0;
	padding: 0 10px;
	width: 45px;
}

a.download-button:before, a.colorizeit-button:before {
	background: url("./images/icons_download.png") no-repeat 0 0;
	content: '';
	display: inline-block;
	float: left;
	height: 25px;
	padding-bottom: 3px;
	transition: .3s opacity, .3s background-position;
	width: 25px;
}

a.download-button:before {
	margin-right: 5px;
}

a.colorizeit-button:before {
	background-position: -26px -2px;
	margin-top: 8px;
	width: 22px;
}

a.download-button:hover:before, a.colorizeit-button:hover:before {
	opacity: 0.8;
}

a.download-button:hover:before {
	background-position: 0 3px;
}

a.download-button span {
	display: block;
}

a.download-button .vendor-version {
	font-weight: normal;
	opacity: 0.8;
}

.download-info {
	background-color: #ededee;
	border-radius: 2px;
	left: -235px;
	line-height: 1.6em;
	padding: 5px 10px 10px;
	position: absolute;
	visibility: hidden;
	width: 210px;
	z-index: 9;
}

.contrib-download:hover .download-info {
	visibility: visible;
}

.download-info dl {
	margin-top: 5px;
}

.download-info dt {
	font-weight: bold;
}

.contrib-description {
	font-size: 1.1em;
	margin-bottom: 15px;
	position: relative;
}

.contrib-description dt, h3.details-heading {
	color: #536482;
	font-family: Verdana, Helvetica, Arial, sans-serif;
	margin-bottom: 3px;
	padding-bottom: 4px;
	border-bottom: 1px solid #E1E1E1;
	margin-top: 6px;
	text-transform: none;
}

.content h3.details-heading {
	font-size: .9em;
	margin-bottom: 6px;
}

.contrib-description dt strong {
	margin-top: 6px;
	padding-bottom: 12px;
}

.contrib-description ul.profile-icons {
	padding: 0;
	float: right;
	margin-top: -6px;
}

.contrib-description .icon-subscribe, .contrib-description .icon-unsubscribe {
	padding-top: 4px;
}

.contrib-description dd ul, .contrib-description dd ol {
	margin-left: 3em;
}

.contrib-description dd dl.codebox dt {margin-top: 1px;}

ul.general-info {
	border: 1px solid #EAF3F7;
	clear: left;
}

.right-column ul.general-info {
	clear: right;
}

ul.general-info li {
	list-style: none;
	display: block;
	border-bottom: 1px solid #FFFFFF;
	font-size: 1.1em;
	vertical-align: middle;
	line-height: 20px;
}

ul.general-info li li {
	line-height: 1em !important;
}

ul.general-info li strong {
	width: 25%;
	display: block;
	float: left;
	background-color: #F6FAFC;
	padding-left: 10px;
	margin-right: 10px;
}

.license-info {
	line-height: 31px;
	vertical-align: top;
}

.has-submenu:hover .dropdown {
	display: block;
}

#extratabs #extratabs-head {
	width: 98%;
	border-bottom: 1px solid #E5E5E6;
	display: block;
	float: left;
	margin-bottom: 5px;
	padding-left: 2%;
	padding-bottom: 1px;
	position: relative;
}

#extratabs #extratabs-head li {
	list-style: none;
	float: left;
	font-weight: normal;
	margin-right: 2px;
	background: none transparent;
	border: 0;
}

#extratabs #extratabs-head li a {
	background-color: #EDEDEE;
	background-image: none;
	border: 1px solid #EDEDEE;
	text-transform: uppercase;
	padding: 5px 10px;
	color: #2D556F;
	position: relative;
	margin-top: 2px;
	display: block;
}

#extratabs #extratabs-head li.activetab a, #extratabs #extratabs-head li.activetab a:hover {
	background-color: #FFF !important;
	border-color: #E5E5E6 !important;
	color: #333 !important;
	border-bottom-color: #FFFFFF !important;
	padding-bottom: 7px;
	bottom: -2px;
	margin-top: 0;
}

#extratabs #extratabs-head a:hover {
	background-color: #627179;
	border-color: #627179;
	color: #FFFFFF;
}

.tab-panel {
	padding: 0 !important;
}

.main-panel a.screenshot img, .main-panel img.screenshot {
	padding: 3px;
	border: 1px solid #A1A1A1;
	vertical-align: text-top;
	margin: 5px;
}

.main-panel a.screenshot:hover img {
	border-color: #757575;
}

a.expand, a.contract {
	background: url("./images/icon_contracted.gif") no-repeat 0 0;
	display: block;
	float: left;
	height: 16px;
	margin: 3px 5px 0 5px;
	width: 16px;
}

a.contract {
	background-image: url("./images/icon_expanded.gif");
}

/* Author Profile
--------------------------------------------- */
#author-profile .left-column {
	float: left;
	width: 200px;
	margin-right: 0;
}

#author-profile .right-column {
	float: none;
	width: auto;
	margin-left: 210px;
}

.no-avatar-img {
	background: url("./images/no_avatar.gif") no-repeat 0 0;
	width: 118px;
	height: 17px;
	padding-top: 103px;
	margin: auto;
	color: #D8D8D7;
}

/* Contrib Manage
--------------------------------------------- */
#screenshot-manage dl {
	border-bottom: 1px dashed #CCCCCC;
	padding-top: 8px;
}

#screenshot-manage dl:last-child { border-bottom: none; }

.item-control-button {
	background-repeat: no-repeat;
	display: block;
	float: right;
	height: 16px;
	margin-left: 5px;
	width: 16px;
}

.edit		{ background-image: url("./images/icon_edit.gif"); }
.delete		{ background-image: url("./images/icon_delete.gif"); }
.move-up 	{ background-image: url("./images/icon_up.gif"); }
.move-down	{ background-image: url("./images/icon_down.gif"); }
.move-up-disabled	{ background-image: url("./images/icon_up_disabled.gif"); }
.move-down-disabled	{ background-image: url("./images/icon_down_disabled.gif"); }

#colorizeit-frame {
	border-width: 0;
	height: 900px;
	width: 100%;
}

/* Listings
--------------------------------------------- */
.contribution-list-actions {
	padding-top: 9px;
}

dd.faq-tools {
	text-align: right;
	border: 0 !important;
	width: 240px;
}

dd.general {
	padding-left: 5px !important;
	padding-right: 5px !important;
	font-size: 1.1em;
}

dd.general img {
	vertical-align: middle;
}
/* ... */

